Fixing sidebar avatar block spacing.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@2426 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -223,7 +223,7 @@ div#sidebar {
 		div#sidebar div.item-avatar img {
 			width: 40px;
 			height: 40px;
-			margin: 2px;
+			margin: 1px;
 		}
 
 		div#sidebar .avatar-block { overflow: hidden; }
